--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "slidev export"
   },
   "dependencies": {
+    "@mdi/svg": "^7.4.47",
     "@slidev/cli": "^0.49.28",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
@@ -19,6 +20,6 @@
     "@iconify-json/carbon": "^1.2.1",
     "@iconify-json/logos": "^1.1.43",
     "@iconify-json/mdi": "^1.2.0",
-    "playwright-chromium": "^1.45.1"
+    "playwright-chromium": "^1.47.2"
   }
 }
