--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iconify-json/carbon": "^1.2.1",
     "@iconify-json/logos": "^1.1.43",
     "@iconify-json/mdi": "^1.2.0",
+    "@mdi/font": "^7.4.47",
     "playwright-chromium": "^1.47.2"
   }
 }
